fix spacing

--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -109,7 +109,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        gap: 20px;
+        gap: 12px;
         list-style: none;
 
         display: none;
